[tool.poetry]
name = "openai-quickstart-python"
version = "0.1.0"
description = "DSample app downloaded from openai"
authors = ["gilgamesh7 <felidaesrule@yahoo.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "openai_quickstart_python"}]

[tool.poetry.dependencies]
python = "^3.10"
openai = "^0.27.2"
flask = "^2.2.3"
setuptools = "^67.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
